# ---------------------

./: .gitignore  .sqlxrc  1.md  Cargo.toml  GEMINI.md  README.md  TODO.md  docker-compose.yml  env.example  telegram_bot.db
admin-panel/: README.md  index.html  package-lock.json  package.json
admin-panel/src/: App.tsx  api.ts  index.css  types.ts
admin-panel/src/components/: DrawingRenderer.tsx  Layout.tsx  LoginScreen.tsx  SurveyCardStack.tsx  SurveyDisplay.tsx  SurveyOverview.tsx  SurveyQueue.tsx  TopSlots.tsx  UserProfile.tsx
admin-panel/src/contexts/: AuthContext.tsx
admin-panel/src/pages/: Bookings.tsx  Broadcast.tsx  Dashboard.tsx  ExternalUsers.tsx  NoResponseUsers.tsx  Roles.tsx  Slots.tsx  Surveys.tsx  Users.tsx  Votes.tsx
admin-panel/src/utils/: csvUtils.ts  jsonUtils.ts  timeUtils.ts
api_server/: Cargo.toml
api_server/src/: main.rs  rabbitmq.rs  upload.rs
core_logic/: Cargo.toml  sqlx-data.json
core_logic/migrations/: 001_initial_schema.sql
core_logic/src/: db.rs  lib.rs  rabbitmq.rs
migrations/: 0002_event_store.sql  001_initial_schema.sql  20250127000000_create_voting_system.sql  20250826113754_initial.sql
telegram_bot/: Cargo.toml  available_slots.json
telegram_bot/src/: broadcast.rs  db.rs  main.rs
