[workspace]
members = [ "api_server", "core_logic", "telegram_bot" ]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
core_logic = { path = "./core_logic" }
dotenvy = "0.15.7"

redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"