[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
core_logic = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "3.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.0", features = ["axum"] }