[package]
name = "core_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }


serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "5.4.0", features = ["chrono"] }
dotenvy = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
lapin = "3.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }