[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
lapin = "3.2.0"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
serde = "1.0.219"
serde_json = "1.0.143"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
